Armitage Changelog
==================

15 Jul 14 (tested against msf git revision: 55ef5dd484)
---------
- Command Shell experience on Windows Meterpreter is much better now
- Java Meterpreter may now interact with a bash shell
- Removed [host] -> Meterpreter -> Access -> Migrate Now! menu item
- Ctrl+Escape temporarily drops the timeout times for Meterpreter 
  commands to 5s, across the board. If a Meterpreter session appears
  unresponsive, try this to force any hung commands to timeout
- Armitage now warns when a team server is non-responsive by making
  its server button purple. When the server is responsive again, the 
  button will turn its normal color again. This requires that you're
  connected to multiple team servers.
- Windows EXE launcher for Armitage now finds 64-bit Java.

15 May 14 (tested against msf git revision: 0a4c10876d)
---------
- Worked around invisible text selection bug with latest Java on Kali

23 Apr 14 (tested against msf git revision: 0a4c10876d)
---------
- Added Ctrl+L to quickly add an entry to timeline.[xml|tsv] (exported 
  through View -> Reporting -> Export Data)
- Added osx-app to Output: type for payloads. Outputs a zipped MacOS X
  app archive. 
- Scrubbed Armitage to eliminate unnecessary blocking calls from Sleep
  source code. This improves Armitage's responsiveness and takes away
  many opportunities for deadlock.
- Sync Files for Loot and Downloads is now much better with large files
- REJOICE! After more than three years of a team server capability, 
  Armitage now tells you when you are disconnected from a server. 
- Keyboard shortcuts to change text size now work in table view
- Added Copy button to View -> Creds
- Services tab right-click menu now has options to edit a service's info
- Updated Armitage's YAML parser to better deal with unexpected whitespace
  and to provide better errors when YAML file contains constructs that
  Armitage's YAML parser can't deal with.